--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.js -e js,hbs"
   },
-  "author": "KOSHAL SAIN",
+  "author": "KOSHAL",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
